--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{ "accessKeyId": "AKIAJK4I2MJBZXRNNZCA", "secretAccessKey": "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", "region": "us-west-2" }
+{ "accessKeyId": "AKIAIZ3W7GTR5ASAA75Q", "secretAccessKey": "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", "region": "us-west-2" }
